add husky, migration, admin seed and repository for the users module

--- a/.example.env
+++ b/.example.env
@@ -2,3 +2,11 @@ PORT=4000
 JWT_SECRET=
 ACCESS_TOKEN_EXPIRATION=
 API_VERSION=
+
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+POSTGRES_DB=
+POSTGRES_PORT=
+POSTGRES_HOST=
+POSTGRES_SYNCHRONIZE=
+POSTGRES_LOGGING=
