--- a/package.json
+++ b/package.json
@@ -20,13 +20,13 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "typeorm": "typeorm-ts-node-commonjs",
-    "migration:run": "npm run typeorm -- migration:run -d src/database/configs/typeorm.config.ts",
-    "migration:generate": "npm run typeorm -- migration:generate src/database/migrations/$npm_config_name -d src/database/configs/typeorm.config.ts",
-    "migration:create": "npm run typeorm -- migration:create src/database/migrations/$npm_config_name",
-    "migration:revert": "npm run typeorm -- migration:revert -d src/database/configs/typeorm.config.ts",
-    "migration:show": "npm run typeorm -- migration:show -d src/database/configs/typeorm.config.ts",
-    "seed:run": "typeorm-extension seed:run --dataSource src/database/configs/typeorm.config.ts",
-    "seed:create": "typeorm-extension seed:create --name $npm_config_name --root src/database/seeders",
+    "migration:run": "npm run typeorm -- migration:run -d src/infrastructure/databases/postgres/configs/typeorm.config.ts",
+    "migration:generate": "npm run typeorm -- migration:generate src/infrastructure/databases/postgres/migrations/$npm_config_name -d src/database/configs/typeorm.config.ts",
+    "migration:create": "npm run typeorm -- migration:create src/infrastructure/databases/postgres/migrations/$npm_config_name",
+    "migration:revert": "npm run typeorm -- migration:revert -d src/infrastructure/databases/postgres/configs/typeorm.config.ts",
+    "migration:show": "npm run typeorm -- migration:show -d src/infrastructure/databases/postgres/configs/typeorm.config.ts",
+    "seed:run": "typeorm-extension seed:run --dataSource src/infrastructure/databases/postgres/configs/typeorm.config.ts",
+    "seed:create": "typeorm-extension seed:create --name $npm_config_name --root src/infrastructure/databases/postgres/seeders",
     "prepare": "husky"
   },
   "dependencies": {
