--- a/.example.env
+++ b/.example.env
@@ -10,3 +10,10 @@ POSTGRES_PORT=
 POSTGRES_HOST=
 POSTGRES_SYNCHRONIZE=
 POSTGRES_LOGGING=
+
+SESSION_REDIS_HOST=
+SESSION_REDIS_PASSWORD=
+SESSION_REDIS_PORT=
+SESSION_REDIS_DB=
+
+ADMIN_DEFAULT_PASSWORD=
