--- a/.example.env
+++ b/.example.env
@@ -10,3 +10,10 @@ POSTGRES_PORT=
 POSTGRES_HOST=
 POSTGRES_SYNCHRONIZE=
 POSTGRES_LOGGING=
+
+REDIS_HOST=
+REDIS_PASSWORD=
+REDIS_PORT=
+REDIS_DB=
+
+ADMIN_DEFAULT_PASSWORD=
