--- a/.deploy/.env.example
+++ b/.deploy/.env.example
@@ -5,3 +5,6 @@ POSTGRES_PORT=5432:5432
 PGADMIN_DEFAULT_EMAIL=
 PGADMIN_DEFAULT_PASSWORD=
 PGADMIN_PORT=8888:80
+REDIS_PASSWORD=
+REDIS_PORT=6379:6379
+REDIS_DB=0
