--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "argon2": "^0.43.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "ioredis": "^5.6.1",
     "lodash": "^4.17.21",
     "nestjs-typeorm-paginate": "^4.1.0",
     "passport-jwt": "^4.0.1",
