unfinished auth module

--- a/.example.env
+++ b/.example.env
@@ -1,6 +1,7 @@
 PORT=4000
 JWT_SECRET=
-ACCESS_TOKEN_EXPIRATION=
+ACCESS_TOKEN_EXPIRATION=86400 ## 1 day
+REFRESH_TOKEN_EXPIRATION=604800 ## 7 days
 API_VERSION=
 
 POSTGRES_USER=
