--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "ioredis": "^5.6.1",
+    "keycloak-connect": "^26.1.1",
     "lodash": "^4.17.21",
+    "nest-keycloak-connect": "^2.0.0-alpha.2",
     "nestjs-typeorm-paginate": "^4.1.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.16.0",
